--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
-        height: 100%;
+        height: 50%;
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
@@ -170,5 +170,6 @@
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQHhU2xyURarwI5aWw-XNoqSPen0rKOWM&libraries=places&callback=initAutocomplete"
          async defer></script>
+    <iframe src="https://maps.wrld3d.com/embed/?mapscene=d29ed25" width="560" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
   </body>
 </html>
