--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             // Create a marker for each place.
             markers.push(new google.maps.Marker({
               map: map,
-              icon: icon,
+              icon: https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwiTnKHdgIbaAhVH92MKHYSxCVYQjRx6BAgAEAU&url=http%3A%2F%2Fwww.abconpr.com%2F&psig=AOvVaw38Am8s4u9wyLYYajUNFVqE&ust=1522016834148908
               title: place.name,
               position: place.geometry.location
             }));
