Fixed the indoor widget covering the map

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <input id="pac-input" class="controls" type="text" placeholder="Search Box">
     <div id="container">
       <div id="map"></div>
-      <div id="widget-container" class="wrld-widget-container"></div>
-      <button style="position: absolute; z-index: 20" onclick="exitIndoors()">Exit Indoor Map</button>
-      <div id="map2"></div>
+      <div style="position:relative;">
+        <div id="widget-container" class="wrld-widget-container"></div>
+        <button style="position: absolute; z-index: 20" onclick="exitIndoors()">Exit Indoor Map</button>
+        <div id="map2"></div>
+      </div>
     </div>
     <div id="fire-section">
       <h1 class="center"> Important shit </h1>
